#[derive(Default)]
pub struct Gpio {
    // it has 48 pins
    pins: [u8; 6],
    // TODO QSPI pins
    // TODO USB DP/DM pins
}

impl Gpio {
    // TODO
}
